--- a/module-2/module2.css
+++ b/module-2/module2.css
@@ -1,3 +1,64 @@
+/*<style>*/
+
+	@font-face {
+    font-family: "My Font";
+    src: url("comic.ttf") format("truetype");
+	}
+
+	* {
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+	}
+
+	h1{
+		text-align: center;
+		font-family: "My Font", cursive, sans-serif;
+		margin-bottom: 30px;
+		margin-top: 25px;
+	}
+
+	p {
+		font-family: "My Font", cursive, sans-serif;
+		padding: 10px;
+		clear: right;
+		
+	}
+
+	div.me{
+		background: #Eb8b8b;
+		border: 1px solid black;
+	}
+
+	h3{
+		font-family: "My Font", cursive, sans-serif;
+		font-weight: bold;
+		float: right;
+		width: 40%;
+		text-align: center;
+		border: 1px solid black;
+	}
+	#title1{
+		background: #943232;
+	}
+	#title2{
+		background: #A41515;
+	}
+	#title3{
+		background: #ff0000;
+	}
+
+	body{
+		padding: 15px;
+	}		
+	/*</style>*/
+
+.col-md-2, .col-md-1, .col-lg-3, .col-sm-1
+{
+	float: left;
+	padding: 15px;
+}
+
 @media (min-width: 992px)
 {
 	.col-lg-3{
